# XJTUCAG_Drone

./: README.md
px4_autonomy/: CMakeLists.txt
px4_autonomy/config/: Parameter_for_offboard_example.yaml
px4_autonomy/launch/: offboard_control.launch
px4_autonomy/sh/: vio_fly.sh  vio_fly_sitl.sh
px4_autonomy/src/perception/: cal_stereodepth.cpp
px4_autonomy/src/perception/object_detection/config/: camera_param_gazebo_irisdepth.yaml
px4_autonomy/src/perception/object_detection/cpp_nodes/: landpad_det.cpp
px4_autonomy/src/perception/object_detection/launch/: ellipse_det_gazebo.launch  marker_det_gazebo.launch
src/autonomous-drone/resource/launch/: wooden_mavros_sitl.launch
src/autonomous-drone/src/offboard_control/: CMakeLists.txt  drone_control.cpp  main.cpp  package.xml  ros_client.cpp
src/autonomous-drone/src/offboard_control/include/: drone_control.h
src/autonomous-drone/src/offboard_control/launch/: simulation.launch
src/autonomous-drone/src/trajectory_planner/: CMakeLists.txt
src/autonomous-drone/src/trajectory_planner/src/: spline_optimization_example.cpp  trajectory_planner.cpp
src/autonomous-drone/src/usb_cam/: CMakeLists.txt
src/autonomous-drone/src/usb_cam/include/usb_cam/: usb_cam.h  usb_cam_node.h
src/autonomous-drone/src/usb_cam/launch/: usb_cam-test.launch  usb_cam.launch
src/autonomous-drone/src/usb_cam/nodes/: usb_cam_node.cpp
src/autonomous-drone/src/usb_cam/src/: usb_cam.cpp
src/autonomous-drone/vio_calibration/svo_aero/: intel_aero.launch
src/prometheus_msgs/: CMakeLists.txt
src/px4_autonomy/: package.xml
src/px4_autonomy/config/: waypoints.txt
src/px4_autonomy/resource/world/: outdoor_village_3.world
src/px4_autonomy/sh/: autoland_fly.sh  autoland_fly_sitl.sh  multi_uav_fly_sitl.sh  vio_fly_rpi.sh  xtdrone_vio_sitl.sh
src/px4_autonomy/src/perception/object_detection/config/: usb_cam_camera_param.yaml
src/px4_autonomy/src/perception/object_detection/launch/: landpad_det.launch  landpad_det_gazebo.launch
src/resource/bash/: automous_woodencylinder_sitl.sh
src/resource/world/: window_wooden_cylinder_1.world
